Kubernetes/Server-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diablo-server
  namespace: diablo
  labels:
    app: diablo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diablo-server
  template:
    metadata:
      labels:
        app: diablo-server
    spec:
      containers:
        - name: diablo-server
          image: codebras/diabloserver:${RUN_ID}
          ports:
          - containerPort: 8080
