Kubernetes/Server-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diablo-server
  namespace: diablo
spec:
  selector:
    app: diablo-server
  ports:
    - protocol: TCP
      name: default
      port: 8080
      targetPort: 8080
